--- a/source/less/blocks/button.less
+++ b/source/less/blocks/button.less
@@ -19,7 +19,7 @@
   }
 
   &:active {
-    color: @color-back--opasity;
+    color: @color-back--opacity;
   }
 }
 
@@ -27,5 +27,6 @@
   .button {
     width: 245px;
     line-height: 20px;
+    margin: auto;
   }
 }
