--- a/source/less/blocks/header.less
+++ b/source/less/blocks/header.less
@@ -4,6 +4,8 @@
   justify-content: center;
   margin: 0 auto;
   padding: 0;
+  padding-top: 11px;
+  padding-bottom: 5px;
 }
 
 .header__wrapper {
@@ -15,6 +17,7 @@
 }
 
 .header__menu {
+
   padding: 0;
 }
 
