--- a/source/less/blocks/more-info.less
+++ b/source/less/blocks/more-info.less
@@ -28,7 +28,7 @@
   .more-info {
     display: flex;
     flex-direction: column;
-    height: 400px; /*временно*/
+    margin-top: 0;
   }
 
   .more-info__show {
@@ -38,7 +38,6 @@
     background-color: @color-back--text;
     font-size: 16px;
     line-height: 20px;
-    margin: auto;
   }
 
   .more-info__head {
