--- a/source/less/variable.less
+++ b/source/less/variable.less
@@ -1,7 +1,7 @@
 @color-button:#68b738;
 @color-button--hvr:#5eaa2f;
 @color-back--main:#ffffff;
-@color-back--opasity: rgba(255,255,255,0.3);
+@color-back--opacity: rgba(255,255,255,0.3);
 @color-back--hvr: rgba(255,255,255,0.6);
 @color-back--text:#a5cc86; /*Временно вместо #f2f2f2 */
 @color-back--catalog: #afaaaa;/* Временно вместо #cdcdcd*/
