--- a/source/less/blocks/catalog-description.less
+++ b/source/less/blocks/catalog-description.less
@@ -1,4 +1,11 @@
+.catalog-description {
+  width: 140px;
+  padding: 0;
+  margin: 0;
+}
+
 .catalog-description__item {
+  margin: 0;
   font-family: @font-family--arial;
   font-size: 12px;
   line-height: 16px;
@@ -7,25 +14,32 @@
 }
 
 .catalog-description .catalog-description__item:first-child {
-  padding-right: 30px;/*нужно 71*/
+  text-align: left;
 }
 
 .catalog-description .catalog-description__item:last-child {
-  padding-right: 10px;/*нужно 19*/
+  text-align: right;
 }
 
 @media (min-width: @tablet-width) {
-  .catalog-description .catalog-description__item:first-child {
-    padding-right: 146px;
-  }
-
   .catalog-description__item {
     border-bottom: 1px solid @color-border;
+    font-size: 16px;
+    height: 20px;
   }
 
   .catalog-description {
     margin: auto;
     margin-top: 28px;
     margin-bottom: 40px;
+    width: 300px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .catalog-description {
+    margin: auto;
+    margin-bottom: 40px;
+    width: 170px;
   }
 }
