--- a/source/less/blocks/footer.less
+++ b/source/less/blocks/footer.less
@@ -5,13 +5,14 @@
 
 .footer__image {
   margin: auto;
-  margin-top: 39px;
-  margin-bottom: 31px;
+  margin-top: 25px;
+  margin-bottom: 20px;
 }
 
 .footer__container {
   display: flex;
   flex-direction: column;
+  justify-content: center;
 }
 
 .footer__go {
@@ -30,5 +31,11 @@
   .footer__container {
     flex-direction: row;
     justify-content: space-between;
+  }
+
+  .footer__image {
+    margin: 0;
+    margin-top: 62px;
+    margin-bottom: 64px;
   }
 }
