--- a/source/less/blocks/html-academy.less
+++ b/source/less/blocks/html-academy.less
@@ -1,16 +1,21 @@
 .html-academy {
+  display: flex;
+  justify-content: space-between;
   font-family: @font-family--arial;
   color: @color-font--arial;
   font-size: 16px;
   line-height: 16px;
   text-align: left;
-  margin: auto;
-  margin-top: 31px;
-  margin-bottom: 31px;
   padding: 0;
 }
 
 .html-academy__p {
   margin: 0;
   padding: 0;
+}
+
+@media (min-width: @tablet-width) {
+  .html-academy {
+    align-items: center;
+  }
 }
