--- a/source/less/blocks/program-choice.less
+++ b/source/less/blocks/program-choice.less
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   padding: 0;
+  margin: 0;
 }
 
 .program-choice__wrapper {
@@ -10,6 +11,7 @@
 }
 
 .program-choice__get {
+  padding-left: 20px;
   text-decoration: none;
   color: @color-font--main;
   line-height: 15px;
@@ -21,12 +23,9 @@
 }
 
 .program-choice__item {
+  margin-top: 20px;
   list-style-type: none;
   background-color: @color-back--text;
-}
-
-.program-choice__item:first-child {
-  margin-bottom: 30px;
 }
 
 .program-choice__item-head {
@@ -38,14 +37,14 @@
 }
 
 .program-choice__info {
+  width: 223px;
+  padding-left: 21px;
   font-family: @font-family--arial;
   font-size: 14px;
   line-height: 18px;
   text-align: left;
   color: @color-font--arial;
   border-bottom: 1px solid @color-border;
-  padding-top: 24px;
-  padding-bottom: 24px;
 }
 
 .program-choice__icon {
@@ -72,6 +71,7 @@
 
   .program-choice__icon {
     position: absolute;
+    top: 90px;
     width: 200px;
     height: 200px;
     right: 100px;
@@ -80,21 +80,42 @@
   .program-choice__info {
     width: 340px;
     border: none;
+    line-height: 24px;
+    font-size: 16px;
+    padding-left: 0;
+  }
+
+  .program-choice__item-head {
+    margin-top: 81px;
+    margin-bottom: 0;
+    line-height: 37px;
+    font-size: 36px;
+  }
+
+  .program-choice__get {
+    line-height: 20px;
+    font-size: 20px;
+    padding-left: 0;
+    margin-top: 60px;
+    margin-bottom: 60px;
   }
 }
 
 @media (min-width: @desktop-width) {
   .program-choice {
     flex-direction: row;
+    justify-content: space-between;
     max-width: 1220px;
     margin: 0 auto;
   }
 
   .program-choice__get {
     margin-left: 52px;
+    margin-top: 36px;
   }
 
   .program-choice__info {
+    width: 470px;
     height: 65px;
     margin: auto;
     margin-left: 52px;
@@ -107,7 +128,8 @@
   .program-choice__item {
     background-color: @color-back--text;
     width: 580px;
-    margin: auto;
+    margin-bottom: 20px;
+    margin-top: 0;
   }
 
   .program-choice__wrapper {
@@ -116,8 +138,15 @@
 
   .program-choice__icon {
     position: relative;
-    width: 50px;
-    height: 50px;
-    right: -10px;
+    width: 100px;
+    height: 100px;
+    top: 1px;
+    left: 14px;
+  }
+
+  .program-choice__item-head {
+    margin-left: 063px;
+    margin-bottom: 75px;
+    margin-top: 51px;
   }
 }
