--- a/source/less/blocks/smm-list.less
+++ b/source/less/blocks/smm-list.less
@@ -3,8 +3,9 @@
   justify-content: center;
   border-top: 1px solid @color-border;
   border-bottom: 1px solid @color-border;
-  padding-top: 24px;
-  padding-bottom: 24px;
+  padding: 0;
+  padding-top: 22px;
+  padding-bottom: 22px;
 }
 
 .smm-list__item {
@@ -19,5 +20,6 @@
 @media (min-width: @tablet-width) {
   .smm-list {
     border: none;
+    align-items: center;
   }
 }
