--- a/source/less/blocks/works.less
+++ b/source/less/blocks/works.less
@@ -14,12 +14,16 @@
   text-align: left;
   line-height: 60px;
   font-weight: normal;
+  margin-bottom: 15px;
 }
 
 .works__item {
+  position: relative;
   list-style: none;
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-end;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
 
 .works__info {
@@ -28,11 +32,15 @@
   line-height: 18px;
   text-align: left;
   color: @color-font--arial;
-  width: 190px;
+  width: 200px;
+  margin: 0;
 }
 
-.works__icon {
+.works__item::before {
+  content: "";
   position: relative;
+  left: 0;
+  top: 20%;
   width: 60px;
   height: 60px;
   background-color: @color-button;
@@ -44,6 +52,7 @@
   .works__list {
     flex-direction: row;
     flex-wrap: wrap;
+    justify-content: space-between;
   }
 
   .works__item {
@@ -53,15 +62,47 @@
     justify-content: stretch;
   }
 
-  .works__icon {
-    margin: auto;
-    margin-left: 0;
+  .works__item::before {
+    content: "";
+    position: relative;
+    right: 10px;
+    width: 80px;
+    height: 80px;
+    background-color: @color-button;
+    margin: initial;
+    margin-bottom: 37px;
+    margin-top: 60px;
+  }
+
+  .works__head {
+    font-size: 60px;
+    line-height: 60px;
+  }
+
+  .works__info {
+    font-size: 16px;
+    line-height: 24px;
   }
 }
 
 @media (min-width: @desktop-width) {
+  .works__list {
+    padding: 0;
+    margin-top: 63px;
+  }
+
+  .works__item::before {
+    content: "";
+    margin: 0;
+  }
+
+  .works__item {
+    width: auto;
+    flex-grow: 1;
+  }
+
   .works__info {
-    width: 201px;
-    height: 63px;
+    width: 250px;
+    margin-top: 37px;
   }
 }
