--- a/source/less/blocks/header.less
+++ b/source/less/blocks/header.less
@@ -4,21 +4,25 @@
   justify-content: center;
   margin: 0 auto;
   padding: 0;
-  padding-top: 11px;
-  padding-bottom: 5px;
+  padding-top: 25px;
+  padding-bottom: 6px;
 }
 
 .header__wrapper {
   display: flex;
   width: 300px;
-  justify-content: space-between;
   margin: 0 auto;
   padding: 0;
 }
 
 .header__menu {
-
+  display: none;
   padding: 0;
+}
+
+.header__logo {
+  margin-left: 7px;
+  margin-right: 65px;
 }
 
 .header__logo-image {
@@ -33,11 +37,14 @@
 
 @media (min-width: @tablet-width) {
   .header {
+    margin-top: 0;
+    padding-top: 0;
     flex-direction: row;
     width: 710px;
   }
 
   .header__menu {
+    display: block;
     flex-grow: 1;
   }
 
@@ -53,6 +60,7 @@
 
 @media (min-width: @desktop-width) {
   .header {
+    padding-top: 41px;
     width: 1220px;
     position: relative;
     background: none;
