--- a/source/less/blocks/more-info.less
+++ b/source/less/blocks/more-info.less
@@ -1,15 +1,18 @@
 .more-info__part {
+  margin: auto;
   font-family: @font-family--arial;
-  font-size: 14px;
+  font-size: 12px;
   text-align: left;
-  line-height: 20px;
+  line-height: 16px;
   color: @color-font--arial;
+  margin-bottom: 35px;
 }
 
 .more-info__head {
+  margin: auto;
   font-family: @font-family--oswald;
   text-transform: uppercase;
-  font-size: 20px;
+  font-size: 16px;
   text-align: center;
   line-height: 20px;
   font-weight: normal;
@@ -44,14 +47,18 @@
     margin: 0 auto;
     margin-top: 50px;
     width: 135px;
+    font-size: 20px;
+    line-height: 20px;
   }
 
   .more-info__part {
-    width: 165px;
+    width: 170px;
     margin: auto;
     margin-top: 28px;
-    margin-bottom: 85px;
     text-align: center;
+    font-size: 16px;
+    line-height: normal;
+    margin-bottom: 0;
   }
 }
 
