--- a/source/less/blocks/site-list.less
+++ b/source/less/blocks/site-list.less
@@ -25,7 +25,8 @@
 
 
 .site-list__link:not([href]) {
-  border-bottom: 1px solid @color-button;
+  padding-bottom: 5px;
+  border-bottom: 2px solid @color-button;
 }
 
 .site-list__link[href] {
@@ -57,20 +58,30 @@
   }
 
   .site-list__item:nth-child(2) {
-    margin-left: 36px;
-    margin-right: 36px;
+    margin-left: 31px;
+    margin-right: 38px;
   }
 }
 
 @media (min-width: @desktop-width) {
-  .site-list__link--index {
-    color: @color-back--main;
+  .site-list__item:nth-child(2) {
+    margin: 0;
+    margin-left: 32px;
+    margin-right: 28px;
+  }
+
+  .site-list__link {
     line-height: 25px;
     font-size: 20px;
   }
 
+  .site-list__link--index {
+    color: @color-back--main;
+  }
+
   .site-list__link--index:not([href]) {
-    border-bottom: 1px solid @color-back--main;
+    padding-bottom: 5px;
+    border-bottom: 2px solid @color-back--main;
   }
 
   .site-list__link--index[href] {
