--- a/source/less/blocks/burger.less
+++ b/source/less/blocks/burger.less
@@ -1,25 +1,25 @@
-/*.burger {
+.burger {
   width: 25px;
   height: 20px;
   cursor: pointer;
-  margin: auto;
   position: relative;
   display: inline-block;
   border: none;
-  border-top: 2px solid @color-font--main;
-  border-bottom: 2px solid @color-font--main;
-  text-shadow: 0 1px 0 @color-font--main;
+  border-top: 2px solid @color-font--black;
+  border-bottom: 2px solid @color-font--black;
+  text-shadow: 0 1px 0 @color-font--black;
+  top: 10px;
 }
 
 .burger::before {
   content: "";
   position: absolute;
   top: 7px;
-  left: 0px;
+  left: 0;
   width: 100%;
-  border-top: 2px solid @color-font--main;
-}*/
-
+  border-top: 2px solid @color-font--black;
+}
+/*
 .burger--no-js {
   width: 20px;
   height: 20px;
@@ -47,7 +47,7 @@
 .burger--no-js::before {
   transform: rotate(-45deg);
 }
-
+*/
 @media (min-width: @tablet-width) {
   .burger {
     display: none;
