--- a/source/less/blocks/catalog-description.less
+++ b/source/less/blocks/catalog-description.less
@@ -2,10 +2,13 @@
   width: 140px;
   padding: 0;
   margin: 0;
+  margin-top: 8.5px;
+  border-collapse: collapse;
 }
 
 .catalog-description__item {
   margin: 0;
+  padding: 0;
   font-family: @font-family--arial;
   font-size: 12px;
   line-height: 16px;
@@ -26,20 +29,21 @@
     border-bottom: 1px solid @color-border;
     font-size: 16px;
     height: 20px;
+    padding-bottom: 10px;
   }
 
   .catalog-description {
-    margin: auto;
-    margin-top: 28px;
-    margin-bottom: 40px;
-    width: 300px;
+    margin-top: 23px;
+    margin-bottom: 25px;
+    width: 250px;
   }
 }
 
 @media (min-width: @desktop-width) {
   .catalog-description {
     margin: auto;
-    margin-bottom: 40px;
+    margin-bottom: 30px;
+    margin-top: 20px;
     width: 170px;
   }
 }
