--- a/source/less/blocks/introduce.less
+++ b/source/less/blocks/introduce.less
@@ -1,8 +1,9 @@
 .introduce {
   margin-top: 0;
   background: url("../img/index-background-mobile@1x.jpg") no-repeat;
-  background-position-y: top;
-  background-size: 100% 305px;
+  background-position-y: -15px;
+  background-size: 100%;
+  padding-top: 23px;
 }
 
 .introduce__head {
@@ -12,6 +13,7 @@
   font-size: 36px;
   color: @color-back--main;
   text-align: center;
+  margin: 0;
 }
 
 .introduce__container {
@@ -26,11 +28,12 @@
   font-size: 14px;
   color: @color-back--main;
   text-align: center;
+  padding-top: 8px;
 }
 
 .introduce__img {
   margin: auto;
-  margin-top: 10px;
+  margin-top: 11px;
 }
 
 @media (min-width: @tablet-width) {
@@ -52,6 +55,7 @@
 
   .introduce {
     background: none;
+    padding-top: 35px;
   }
 
   .introduce__info {
@@ -60,12 +64,13 @@
     font-size: 20px;
     color: @color-font--main;
     text-align: left;
+    margin-top: 31px;
   }
 
   .introduce__button {
-    margin-top: 28px;
-    padding-top: 15px;
-    padding-bottom: 15px;
+    margin-top: 27px;
+    padding-top: 13px;
+    padding-bottom: 7px;
     font-size: 20px;
     line-height: 20px;
     position: absolute;
@@ -74,8 +79,14 @@
 }
 
 @media (min-width: @desktop-width) {
+  .introduce__info {
+    margin-top: 15px;
+    padding-top: 4px;
+  }
+
   .introduce__button {
     position: static;
+    padding-top: 15px;
     margin-left: 0;
   }
 
@@ -100,7 +111,7 @@
   }
 
   .introduce__head {
-    margin-top: 90px;
+    margin-top: 49px;
     margin-bottom: 20px;
   }
 }
