--- a/source/less/blocks/main.less
+++ b/source/less/blocks/main.less
@@ -15,6 +15,10 @@
   background-image: linear-gradient(to bottom, @color-button, @color-button 60%, @color-back--main 40%, @color-back--main);
 }
 
+.main__head--catalog {
+  margin-top: 10px;
+}
+
 @media (min-width: @tablet-width) {
   .main__back-color {
     position: relative;
@@ -25,6 +29,10 @@
     font-size: 60px;
     line-height: 60px;
   }
+
+  .main__head--catalog {
+    margin-top: 37px;
+  }
 }
 
 @media (min-width: @desktop-width) {
@@ -32,18 +40,16 @@
     position: absolute;
     content: "";
     right: 0;
-    top: -100px;
+    bottom: 90px;
     width: 50%;
-    height: 670px;
+    height: 700px;
     background: url("../img/index-background-desktop@1x.jpg");
     background-color: @color-button;
     background-repeat: no-repeat;
-    background-size: 720px 696px;
-    background-position-y: -30px;
     z-index: 0;
   }
 
   .main__head--catalog {
-    margin-top: 60px;
+    margin-top: 50px;
   }
 }
