--- a/source/less/blocks/program-choice.less
+++ b/source/less/blocks/program-choice.less
@@ -18,7 +18,7 @@
   font-size: 16px;
   text-transform: uppercase;
   display: block;
-  margin-top: 21px;
+  margin-top: 43px;
   margin-bottom: 21px;
 }
 
@@ -34,15 +34,19 @@
   font-weight: normal;
   line-height: 37px;
   text-align: left;
+  margin-top: 22px;
 }
 
 .program-choice__info {
-  width: 223px;
-  padding-left: 21px;
+  margin-top: 0;
+  width: 250px;
+  padding-top: 6px;
+  padding-left: 17px;
   font-family: @font-family--arial;
   font-size: 14px;
   line-height: 18px;
   text-align: left;
+  font-weight: normal;
   color: @color-font--arial;
   border-bottom: 1px solid @color-border;
 }
@@ -54,16 +58,24 @@
   border-radius: 50%;
   overflow: hidden;
   background-color: @color-button;
-  margin: auto;
-  margin-right: 20px;
-  margin-left: 22px;
+  left: 17px;
+  top: 17px;
+  margin-right: 35px;
 }
 
 .program-choice__section {
   display: flex;
 }
 
+.program-choice__item:nth-child(2) .program-choice__info {
+  width: 240px;
+}
+
 @media (min-width: @tablet-width) {
+  .program-choice__item {
+    margin-top: 28px;
+  }
+
   .program-choice__wrapper {
     max-width: 710px;
     position: relative;
@@ -72,9 +84,9 @@
   .program-choice__icon {
     position: absolute;
     top: 90px;
+    left: 440px;
     width: 200px;
     height: 200px;
-    right: 100px;
   }
 
   .program-choice__info {
@@ -82,11 +94,13 @@
     border: none;
     line-height: 24px;
     font-size: 16px;
-    padding-left: 0;
+    padding-top: 20px;
+    padding-left: 47px;
   }
 
   .program-choice__item-head {
-    margin-top: 81px;
+    margin-top: 72px;
+    margin-left: 45px;
     margin-bottom: 0;
     line-height: 37px;
     font-size: 36px;
@@ -95,9 +109,13 @@
   .program-choice__get {
     line-height: 20px;
     font-size: 20px;
-    padding-left: 0;
+    padding-left: 46px;
     margin-top: 60px;
     margin-bottom: 60px;
+  }
+
+  .program-choice__item:nth-child(2) .program-choice__info {
+    width: 340px;
   }
 }
 
@@ -107,22 +125,25 @@
     justify-content: space-between;
     max-width: 1220px;
     margin: 0 auto;
+    margin-top: 10px;
   }
 
   .program-choice__get {
-    margin-left: 52px;
     margin-top: 36px;
+    margin-left: 7px;
   }
 
   .program-choice__info {
     width: 470px;
     height: 65px;
-    margin: auto;
-    margin-left: 52px;
+    margin: 0;
+    padding-top: 0;
+    padding-left: 57px;
   }
 
   .program-choice__item:first-child {
     margin-bottom: 0;
+    margin-right: 79px;
   }
 
   .program-choice__item {
@@ -140,12 +161,12 @@
     position: relative;
     width: 100px;
     height: 100px;
-    top: 1px;
-    left: 14px;
+    top: 25px;
+    left: 47px;
   }
 
   .program-choice__item-head {
-    margin-left: 063px;
+    margin-left: 73px;
     margin-bottom: 75px;
     margin-top: 51px;
   }
