--- a/source/less/blocks/works.less
+++ b/source/less/blocks/works.less
@@ -14,6 +14,7 @@
   text-align: left;
   line-height: 60px;
   font-weight: normal;
+  margin-top: 9px;
   margin-bottom: 15px;
 }
 
@@ -32,20 +33,22 @@
   line-height: 18px;
   text-align: left;
   color: @color-font--arial;
-  width: 200px;
+  width: 250px;
   margin: 0;
+  padding-left: 8px;
+  padding-top: 0;
 }
 
 .works__item::before {
   content: "";
   position: relative;
   left: 0;
-  top: 20%;
-  width: 60px;
-  height: 60px;
+  width: 69px;
+  height: 58px;
   background-color: @color-button;
   margin: auto;
-  margin-right: 20px;
+  margin-top: 0;
+  margin-right: 13px;
 }
 
 @media (min-width: @tablet-width) {
@@ -56,25 +59,28 @@
   }
 
   .works__item {
-    width: 300px;
-    margin: auto;
+    width: 325px;
     flex-direction: column;
     justify-content: stretch;
+    padding-bottom: 0;
+    padding-top: 0;
+    margin-bottom: 70px;
   }
 
   .works__item::before {
     content: "";
     position: relative;
-    right: 10px;
+    right: 15px;
     width: 80px;
     height: 80px;
     background-color: @color-button;
     margin: initial;
-    margin-bottom: 37px;
+    margin-bottom: 30px;
     margin-top: 60px;
   }
 
   .works__head {
+    margin-top: 38px;
     font-size: 60px;
     line-height: 60px;
   }
@@ -82,6 +88,8 @@
   .works__info {
     font-size: 16px;
     line-height: 24px;
+    padding-left: 0;
+    margin-top: 0;
   }
 }
 
@@ -97,12 +105,15 @@
   }
 
   .works__item {
-    width: auto;
-    flex-grow: 1;
+    width: 250px;
   }
 
   .works__info {
     width: 250px;
     margin-top: 37px;
+  }
+
+  .works__head {
+    margin-top: 45px;
   }
 }
