Продолжаем подгонять под ПП

--- a/source/less/blocks/program-choice.less
+++ b/source/less/blocks/program-choice.less
@@ -125,7 +125,7 @@
     justify-content: space-between;
     max-width: 1220px;
     margin: 0 auto;
-    margin-top: 10px;
+    padding-top: 19px;
   }
 
   .program-choice__get {
