--- a/source/less/blocks/main.less
+++ b/source/less/blocks/main.less
@@ -19,6 +19,10 @@
   margin-top: 10px;
 }
 
+.main__head--form {
+  margin-top: 17px;
+}
+
 @media (min-width: @tablet-width) {
   .main__back-color {
     position: relative;
@@ -31,7 +35,11 @@
   }
 
   .main__head--catalog {
-    margin-top: 37px;
+    margin-top: 35px;
+  }
+
+  .main__head--form {
+    margin-top: 42px;
   }
 }
 
@@ -51,5 +59,10 @@
 
   .main__head--catalog {
     margin-top: 50px;
+  }
+
+  .main__head--form {
+    margin-top: 60px;
+    padding-left: 10px;
   }
 }
