--- a/source/less/blocks/container.less
+++ b/source/less/blocks/container.less
@@ -7,6 +7,11 @@
   .container {
     max-width: 710px;
   }
+
+  .container__nb {
+    display: flex;
+    padding-top: 30px;
+  }
 }
 
 @media (min-width: @desktop-width) {
