--- a/source/less/blocks/example.less
+++ b/source/less/blocks/example.less
@@ -28,6 +28,7 @@
   font-size: 24px;
   line-height: 24px;
   text-align: center;
+  margin: 0;
 }
 
 .example__small {
@@ -36,6 +37,7 @@
   line-height: 12px;
   text-align: center;
   color: @color-font--arial;
+  width: 57px;
 }
 
 .example__cost {
@@ -44,6 +46,7 @@
   font-size: 14px;
   line-height: 20px;
   text-align: center;
+  margin-top: 17px;
 }
 
 .example__cat {
@@ -59,6 +62,51 @@
 
 .example__cat--was {
   text-align: left;
+}
+
+.example__features {
+  margin-top: 32px;
+  display: flex;
+  justify-content: space-around;
+}
+
+.example__description {
+  position: relative;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  width: 80px;
+  height: 60px;
+}
+
+.example__description::before {
+  content: "";
+  position: absolute;
+  width: 124px;
+  height: 60px;
+  border-top: 2px solid @color-back--catalog;
+  border-left: 2px solid @color-back--catalog;
+  border-right: 2px solid @color-back--catalog;
+  border-radius: 5%;
+  bottom: 10px;
+}
+
+.example__small::before,
+.example__small::after {
+  content: "";
+  position: absolute;
+  width: 18px;
+  height: 2px;
+  background-color: @color-back--catalog;
+}
+
+.example__small::after {
+  right: -20px;
+}
+
+.example__small::before {
+  left: -19px;
+  bottom: 10px;
 }
 
 @media (min-width: @tablet-width) {
