--- a/source/less/blocks/add-goods.less
+++ b/source/less/blocks/add-goods.less
@@ -4,7 +4,7 @@
 }
 
 .add-goods {
-  width: 280px;
+  width: 290px;
   margin: 0 auto;
   padding: 0;
 }
@@ -13,10 +13,19 @@
   .add-goods {
     width: 710px;
   }
+
+  .add-goods__list {
+    padding-left: 48px;
+    padding-top: 46px;
+  }
 }
 
 @media (min-width: @desktop-width) {
   .add-goods {
     margin: 0;
+  }
+
+  .add-goods__list {
+    width: 1450px;
   }
 }
