--- a/source/less/blocks/program-choice.less
+++ b/source/less/blocks/program-choice.less
@@ -18,12 +18,12 @@
   font-size: 16px;
   text-transform: uppercase;
   display: block;
-  margin-top: 43px;
+  margin-top: 20px;
   margin-bottom: 21px;
 }
 
 .program-choice__item {
-  margin-top: 20px;
+  margin-top: 19px;
   list-style-type: none;
   background-color: @color-back--text;
 }
@@ -34,14 +34,15 @@
   font-weight: normal;
   line-height: 37px;
   text-align: left;
-  margin-top: 22px;
+  margin-top: 34px;
 }
 
 .program-choice__info {
-  margin-top: 0;
+  margin-top: 5px;
   width: 250px;
   padding-top: 6px;
   padding-left: 17px;
+  padding-bottom: 21px;
   font-family: @font-family--arial;
   font-size: 14px;
   line-height: 18px;
@@ -58,9 +59,9 @@
   border-radius: 50%;
   overflow: hidden;
   background-color: @color-button;
-  left: 17px;
-  top: 17px;
-  margin-right: 35px;
+  left: 19px;
+  top: 27px;
+  margin-right: 37px;
 }
 
 .program-choice__section {
