--- a/source/less/style.less
+++ b/source/less/style.less
@@ -31,3 +31,4 @@
 @import "blocks/cat-addition.less";
 @import "blocks/container.less";
 @import "blocks/cat-aspiration.less";
+@import "blocks/add-title.less";
