--- a/source/less/blocks/present.less
+++ b/source/less/blocks/present.less
@@ -6,6 +6,7 @@
   background-repeat: no-repeat;
   margin: 0 auto;
   text-align: center;
+  margin-top: 55px;
 }
 
 .present__text {
@@ -23,6 +24,7 @@
     width: 708px;
     height: 200px;
     background-image: url("../img/gift-photo-tablet@1x.jpg");
+    margin-top: 75px;
   }
 }
 
@@ -31,5 +33,7 @@
     width: 245px;
     height: 289px;
     background-image: url("../img/gift-photo-desktop@1x.jpg");
+    margin: 0;
+    margin-left: 80px;
   }
 }
