--- a/source/less/blocks/welcome.less
+++ b/source/less/blocks/welcome.less
@@ -11,7 +11,7 @@
   font-size: 16px;
   text-align: left;
   line-height: 20px;
-  margin-right: 15px;
+  width: 210px;
 }
 
 .welcome__address {
@@ -26,6 +26,7 @@
   .welcome {
     max-width: 710px;
     padding-top: 65px;
+    justify-content: space-between;
   }
 
   .welcome__partnership {
