Продолжаем подгонять под ПП

--- a/source/less/blocks/add-article.less
+++ b/source/less/blocks/add-article.less
@@ -4,6 +4,7 @@
   flex-direction: column;
   margin: 0;
   margin-bottom: 7px;
+  border-top: 1px solid @color-back--catalog;
 }
 
 .add-article__title {
@@ -15,7 +16,8 @@
   line-height: 16px;
   text-align: left;
   margin-top: 24px;
-  margin-bottom: 12px;
+  margin-bottom: 11px;
+  padding-left: 5px;
 }
 
 .add-article__item {
@@ -38,23 +40,35 @@
   text-align: right;
 }
 
+.add-article__order {
+  font-size: 16px;
+  line-height: 20px;
+  padding-top: 12px;
+  padding-left: 3px;
+}
+
 @media (min-width: @tablet-width) {
+  .add-article__title {
+    font-size: 20px;
+    line-height: 20px;
+    width: 300px;
+    margin-top: 0;
+    margin-bottom: 0;
+  }
+
   .add-article {
     flex-direction: row;
     flex-wrap: wrap;
     align-items: baseline;
     justify-content: space-between;
     width: 635px;
+    margin-bottom: 9px;
+    padding-top: 20px;
   }
 
   .add-article__order {
     width: 630px;
     margin-bottom: 20px;
-  }
-
-  .add-article__title {
-    font-size: 20px;
-    line-height: 20px;
   }
 
   .add-article__item {
@@ -63,54 +77,60 @@
   }
 
   .add-article__table {
-    width: 260px;
-    margin-bottom: 26px;
+    width: 305px;
+    margin-bottom: 21px;
   }
 
   .add-article__line .add-article__item:first-child {
+    width: 200px;
     text-align: right;
+  }
+
+  .add-article__line .add-article__item:last-child {
+    width: 80px;
   }
 }
 
-@media (min-width: @tablet-width) {
+@media (min-width: @desktop-width) {
   .add-article__order {
     width: 245px;
+    margin-bottom: 0;
+    padding-top: 9px;
+    padding-bottom: 0;
   }
 
   .add-article {
     flex-wrap: nowrap;
+    margin-left: 60px;
+    padding-top: 18px;
+    padding-bottom: 15px;
+    margin-bottom: 0;
+    width: 895px;
+    border-top: 1px solid @color-font--black;
   }
 
   .add-article__table {
     flex-grow: 1;
+    padding-top: 0;
+    width: 295px;
+    margin-bottom: 0;
+    margin-right: 25px;
   }
 
   .add-article__line .add-article__item:first-child {
     text-align: left;
   }
-}
 
-@media (min-width: @desktop-width) {
   .add-article__title {
     width: 321px;
-  }
-
-  .add-article {
-    width: 895px;
-    border-top: 1px solid @color-font--black;
+    padding-top: 0;
   }
 
   .add-article:last-child {
     border-bottom: 1px solid @color-font--black;
   }
 
-  .add-article__table {
-    width: 295px;
-    margin-bottom: 18px;
-    margin-right: 25px;
-  }
-
-  .add-article__order {
-    margin-bottom: 10px;
+  .add-article__item {
+    padding-top: 5px;
   }
 }
