--- a/source/less/blocks/cat-info.less
+++ b/source/less/blocks/cat-info.less
@@ -13,17 +13,24 @@
 }
 
 @media (min-width: @tablet-width) {
+  .cat-info {
+    margin-left: 0;
+    padding-left: 0;
+  }
+
   .cat-info__head {
     margin-top: 45px;
     font-size: 36px;
     line-height: 36px;
-    padding-left: 25px;
+    width: 768px;
+    margin-left: 0;
+    padding-left: 0;
   }
 }
 
 @media (min-width: @desktop-width) {
   .cat-info__head {
     margin-top: 49px;
-    padding-left: 35px;
+    width: 1440px;
   }
 }
