--- a/source/less/blocks/example.less
+++ b/source/less/blocks/example.less
@@ -15,6 +15,7 @@
   line-height: 60px;
   font-weight: normal;
   margin-bottom: 23px;
+  margin-top: 25px;
 }
 
 .example__text {
@@ -98,8 +99,8 @@
   position: relative;
   display: flex;
   justify-content: space-between;
-  margin-top: 34px;
-  margin-left: 45px;
+  margin-top: 31px;
+  margin-left: 42px;
 }
 
 .example__indicator::after {
@@ -132,7 +133,9 @@
 }
 
 .example__img {
-  margin-top: 20px;
+  margin-top: 25px;
+  position: relative;
+  right: 18px;
 }
 
 @media (min-width: @tablet-width) {
@@ -144,6 +147,7 @@
     font-size: 60px;
     line-height: 60px;
     font-weight: normal;
+    margin-top: 48px;
   }
 
   .example__text {
@@ -249,12 +253,21 @@
   }
 
   .example__cost {
-    width: 350px;
+    width: 390px;
     position: static;
     margin-top: 50px;
+    text-align: left;
   }
 
   .example__indicator {
     margin-left: 210px;
+  }
+
+  .example__title {
+    margin-top: 31px;
+  }
+
+  .example__cost-span {
+    margin-left: 65px;
   }
 }
