--- a/source/less/blocks/present.less
+++ b/source/less/blocks/present.less
@@ -30,10 +30,12 @@
 
 @media (min-width: @desktop-width) {
   .present {
+    position: relative;
     width: 245px;
     height: 289px;
     background-image: url("../img/gift-photo-desktop@1x.jpg");
     margin: 0;
-    margin-left: 80px;
+    right: 0;
+    top: 50px;
   }
 }
