--- a/source/less/blocks/cat-data.less
+++ b/source/less/blocks/cat-data.less
@@ -6,17 +6,31 @@
   padding: 0;
 }
 
+.cat-data__label {
+  font-family: @font-family--oswald;
+  text-transform: uppercase;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 18px;
+  color: @color-font--black;
+  text-align: left;
+  margin-right: 13px;
+}
+
+.cat-data__wrapper {
+  display: flex;
+  align-items: baseline;
+  margin-bottom: 10px;
+  margin-left: 18px;
+  margin-right: 15px;
+}
+
 .cat-data__name {
   border: 1px solid @color-back--catalog;
   height: 45px;
   text-transform: uppercase;
-  padding-left: 10px;
-  margin-left: 15px;
-}
-
-.cat-data__wrapper {
-  margin-bottom: 10px;
-  margin-left: 18px;
+  flex-grow: 1;
+  padding-left: 12px;
 }
 
 @media (min-width: @tablet-width) {
@@ -25,15 +39,36 @@
     line-height: 20px;
     padding-left: 0;
     padding-top: 31px;
+    margin-left: 0;
   }
 
   .cat-data__wrapper {
     margin-bottom: 23px;
-    margin-left: 10px;
+    margin-left: 42px;
+    width: 650px;
   }
 
   .cat-data__name {
     padding-left: 15px;
-    width: 450px;
+  }
+
+  .cat-data__label {
+    font-size: 20px;
+    line-height: 20px;
+    margin-right: 20px;
+  }
+
+  .cat-data__wrapper:nth-child(3).cat-data__label {
+    width: 120px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .cat-data {
+    margin-left: 63px;
+  }
+
+  .cat-data__wrapper {
+    width: 570px;
   }
 }
