--- a/source/less/blocks/catalog.less
+++ b/source/less/blocks/catalog.less
@@ -14,7 +14,8 @@
   display: flex;
   flex-wrap: wrap;
   border-top: 1px solid @color-border;
-  padding-bottom: 20px;
+  padding-bottom: 10px;
+  padding-top: 11px;
 }
 
 .catalog__item a {
@@ -31,16 +32,19 @@
   text-transform: uppercase;
   width: 74px;
   margin: 0;
-  margin-top: 21px;
+  margin-top: 24px;
 }
 
 .catalog__item-img {
-  width: 132px;
-  height: 135px;
+  width: 140px;
+  height: 140px;
+  padding-top: 5px;
 }
 
 .catalog__button {
-  margin-top: 2px;
+  font-size: 16px;
+  line-height: 20px;
+  padding-top: 7px;
 }
 
 .catalog__wrapper {
@@ -57,7 +61,7 @@
 
   .catalog__item {
     background-image: linear-gradient(to top, @color-back--catalog, @color-back--catalog 80%, @color-back--main 20%, @color-back--main);
-    width: 324px;
+    width: 339px;
     border: none;
   }
 
