--- a/source/less/blocks/container.less
+++ b/source/less/blocks/container.less
@@ -5,17 +5,21 @@
 
 @media (min-width: @tablet-width) {
   .container {
-    max-width: 710px;
+    max-width: 720px;
   }
 
-  .container--nb {
+  .container__nb {
     display: flex;
-    padding-top: 30px;
+    margin-top: 40px;
   }
 }
 
 @media (min-width: @desktop-width) {
   .container {
     max-width: 1220px;
+  }
+
+  .container__nb {
+    margin-top: 50px;
   }
 }
