--- a/source/less/blocks/header.less
+++ b/source/less/blocks/header.less
@@ -4,8 +4,9 @@
   justify-content: center;
   margin: 0 auto;
   padding: 0;
-  padding-top: 25px;
+  padding-top: 13px;
   padding-bottom: 6px;
+  padding-left: 5px;
 }
 
 .header__wrapper {
@@ -38,7 +39,7 @@
 @media (min-width: @tablet-width) {
   .header {
     margin-top: 0;
-    padding-top: 0;
+    padding-top: 18px;
     flex-direction: row;
     width: 710px;
   }
@@ -60,7 +61,7 @@
 
 @media (min-width: @desktop-width) {
   .header {
-    padding-top: 41px;
+    padding-top: 44px;
     width: 1220px;
     position: relative;
     background: none;
