--- a/source/less/blocks/main.less
+++ b/source/less/blocks/main.less
@@ -16,7 +16,8 @@
 }
 
 .main__head--catalog {
-  margin-top: 10px;
+  margin-top: 18px;
+  margin-bottom: 16px;
 }
 
 .main__head--form {
@@ -35,7 +36,8 @@
   }
 
   .main__head--catalog {
-    margin-top: 35px;
+    margin-top: 42px;
+    padding-left: 5px;
   }
 
   .main__head--form {
@@ -58,7 +60,7 @@
   }
 
   .main__head--catalog {
-    margin-top: 50px;
+    margin-top: 62px;
   }
 
   .main__head--form {
