--- a/source/less/blocks/program.less
+++ b/source/less/blocks/program.less
@@ -25,13 +25,15 @@
     font-size: 20px;
     line-height: 30px;
     margin-top: 55px;
-    padding-left: 47px;
+    padding-left: 42px;
   }
 }
 
 @media (min-width: @desktop-width) {
   .program {
     max-width: 1220px;
+    margin: 0;
+    margin-left: 95px;
   }
 
   .program__intro {
