--- a/source/less/blocks/welcome.less
+++ b/source/less/blocks/welcome.less
@@ -34,11 +34,15 @@
     font-size: 20px;
     text-align: left;
     line-height: 25px;
+    margin-left: 43px;
   }
 }
 
 @media (min-width: @desktop-width) {
   .welcome {
-    width: 570px;
+    width: 500px;
+    margin: 0;
+    margin-left: 145px;
+    margin-top: 125px;
   }
 }
