--- a/source/less/variable.less
+++ b/source/less/variable.less
@@ -3,14 +3,18 @@
 @color-back--main:#ffffff;
 @color-back--opacity: rgba(255,255,255,0.3);
 @color-back--hvr: rgba(255,255,255,0.6);
-@color-back--text:#a5cc86; /*Временно вместо #f2f2f2 */
-@color-back--catalog: #afaaaa;/* Временно вместо #cdcdcd*/
+@color-back--text:#f2f2f2;
+@color-back--catalog: #cdcdcd;
+@color-slider: #dcdcdc;
+@color-slider--shadow: #eaeaea;
 @color-font--main:#111111;
 @color-font--hvr: rgba(17,17,17,0.6);
 @color-font--act: rgba(17,17,17,0.3);
 @color-font--black: #222222;
 @color-font--arial: #444444;
-@color-border: #666666; /*Временно вместо #ededed*/
+@color-border: #ededed;
+@color-html: #666666;
+@color-form--error: #ff8282;
 @font-family--arial: "Arial", sans-serif;
 @font-family--oswald: "Oswald", "Arial", sans-serif;
 @tablet-width: 768px;
